# moj-elektro-v1

./: README.rst  main.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build-pipeline.yml  codeql-analysis.yml  release.yml  static-analysis.yml
moj_elektro_v1/: __init__.py
moj_elektro_v1/blocks/: time_blocks.json  time_blocks.py
moj_elektro_v1/http_access/: http_JSON_conn.py
moj_elektro_v1/web_api_access/: merilna_tocka.py  merilno_mesto.py  meter_quailities.py  meter_readings.py  meter_type.py
