[build-system]
requires = [
    "setuptools>=67.4",
    "wheel",    
]
build-backend = "setuptools.build_meta"

[project]
name = "moj-elektro-v1"
description = "Python library to access MojElektro API v1"
authors = [{name = "Miha Šetina", email = "miha.setina@gmail.com"}]
maintainers = [{name = "Miha Šetina", email = "miha.setina@gmail.com"}]
license = {text = "APACHE,BSD"}
keywords = [
    "opendata",    
    "Slovenija",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: Apache Software License",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",    
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [   
    "aiohttp>=3.9.5"
]
version = "0.0.1"

[project.readme]
file = "README.rst"
content-type = "text/x-rst"

[project.urls]
Homepage = "https://github.com/msetina/moj-elektro-v1"
"Source Code" = "https://github.com/msetina/moj-elektro-v1"
"Issue Tracker" = "https://github.com/msetina/moj-elektro-v1/issues"

[project.optional-dependencies]
testing = [
    "moj-elektro-v1",
    "pytest>=6.1.1",
    "pytest-cov>=4.0,<5.1",
]
mypy = [
    "moj-elektro-v1",    
]

[tool.setuptools]
include-package-data = false
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
include = ["moj_elektro_v1*"]
exclude = ["moj_elektro_v1_tests*"]

[tool.setuptools.package-data]
moj_elektro_v1 = ["py.typed","blocks/time_blocks.json"]

[tool.mypy]
files = "moj_elektro_v1"

[[tool.mypy.overrides]]
ignore_missing_imports = true


